[package]
name = "ext4-rw"
version = "0.1.0"
edition = "2021"
description = "no_std ext4 filesystem with read/write support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/suhteevah/ext4-rw"
keywords = ["ext4", "filesystem", "no_std", "embedded", "bare-metal"]
categories = ["no-std", "filesystem", "embedded"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
log = { version = "0.4", default-features = false }

[features]
default = []
std = []
